Update file and class names for song DTOs